test/spec_vectors/conversions/fail/module_21.wat
(module (func (result f64) (f64.convert_i32_u (i64.const 0))))